[package]
name = "solana-stake-accounts"
version = "0.1.0"
authors = ["Greg Fitzgerald <greg@solana.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
solana-clap-utils = "1.0.9"
solana-cli-config = "1.0.9"
solana-client = "1.0.9"
solana-core = "1.0.9"
solana-net-utils = "1.0.9"
solana-sdk = "1.0.9"
solana-stake-program = "1.0.9"
url = "2.1.1"
